feat(eslint-plugin-ryanair): ESLint Ryanair plugin publish
ESLint Ryanair plugin is published and includes first 7 custom rules, regarding mostly AngularJS 1.7
migration.

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -22,11 +22,21 @@
   },
   "contributors": [
     {
+      "name": "Maksym D.",
+      "email": "maksymddd@gmail.com",
+      "url": "https://github.com/maksymddd"
+    },
+    {
       "name": "George Christogiannopoulos",
       "url": "https://github.com/gc23"
+    },
+    {
+      "name": "Patryk Galuszka",
+      "email": "galuszka.patryk@gmail.com",
+      "url": "https://github.com/patrykgaluszka"
     }
   ],
-  "homepage": "https://github.com/ryanair/linters",
+  "homepage": "https://github.com/ryanair/linters/packages/javascript/eslint-config",
   "license": "MIT",
   "peerDependencies": {
     "eslint": "^4.14.0",
